# PaCS-SR

./: CLAUDE.md  MEMORY_TROUBLESHOOTING.md  README.md  example_usage.py  pyproject.toml  run_demo.py
configs/: config.yaml  demo_config.yaml  picasso.yaml  picasso_glioma.yaml  picasso_meningioma.yaml  pipeline_config.yaml  seram_glioma.yaml  seram_glioma_local.yaml  seram_glioma_picasso.yaml
pacs_sr/analysis/: README.md  __init__.py  analysis.py  analyze_metrics.py  compute_metrics_and_plots.py  compute_pacs_sr_gain.py  metrics.py
pacs_sr/cli/: __init__.py  analyze_metrics.py  build_manifest.py  predict.py  run_pipeline.py  synthseg_eval.py  train.py  visualize.py
pacs_sr/config/: config.py
pacs_sr/data/: folds_builder.py  hdf5_io.py
pacs_sr/experiments/: __init__.py  clinical_validation.py  cross_resolution.py  regional_specialization.py  synthseg_evaluation.py
pacs_sr/model/: metrics.py  metrics_3d.py  metrics_mmd_mf.py  model.py  regularization.py
pacs_sr/pipeline/: __init__.py  checkpoint.py  context.py  orchestrator.py
pacs_sr/pipeline/stages/: __init__.py  analysis.py  base.py  manifest.py  metrics_computation.py  pareto_visualization.py  setup.py  training.py  visualization.py
pacs_sr/seram/: figure_comparison_grid.py  figure_performance_plot.py  figure_synthseg.py  table_msssim.py
pacs_sr/seram/graphical_abstract/: generate_expert_comparison.py  generate_octant_anisotropy.py  generate_octant_spacing_grid.py  generate_octant_sr_methods.py  generate_weight_visualization.py  visualize_glioma_octant.py
pacs_sr/utils/: compute_brain_mask.py  imio.py  logger.py  parallel.py  patches.py  registration.py  settings.py  stats.py  visualize_pacs_sr.py  weight_maps.py  zscore.py
scripts/: convert_nifti_to_hdf5.py  diagnose_memory.py  eclare_h5_adapter.py  generate_bspline.py  generate_eclare_worker.sh  generate_experts.sh  generate_experts_worker.sh  merge_eclare_shards.py  picasso_job.sh  resume_eclare.sh  run_seram.sh  run_seram_picasso.sh  run_seram_picasso_worker.sh  run_synthseg_picasso.sh  run_synthseg_picasso_worker.sh  seram_compute_metrics.py
tests/: test_generate_bspline.py  test_hdf5_io.py  test_logging_and_records.py  test_metrics_3d.py  test_metrics_mmd_mf.py  test_synthseg_evaluation.py
