[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pacs-sr"
version = "0.1.0"
description = "Patchwise Convex Stacking for 3D MRI Super-Resolution under Clinical Anisotropy"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Mario Pascual-González", email="mpascual@uma.es" },
  { name="Ezequiel López-Rubio", email="elr@uma.es" },
  { name="Francisco Sendra-Portero", email="sendra@uma.es" },
  { name="Almudena Pérez Lara", email="almudenaperezlara@gmail.com" },
  { name="Beatriz Asenjo García", email="asenjob@gmail.com" },
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "nibabel>=5.0",
  "scikit-image>=0.21",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.65",
  "antspyx>=0.3.8",
  "psutil>=5.9",
  "pandas>=1.5",
  "pydantic>=2.0",
  "SimpleITK>=2.2",
]

[project.optional-dependencies]
torch = ["torch>=2.1", "lpips>=0.1.4", "torchvision>=0.16"]
viz = ["matplotlib>=3.6", "statsmodels>=0.14"]
dev = ["ruff", "mypy", "pytest"]

[project.scripts]
pacs-sr-build-manifest = "pacs_sr.cli.build_manifest:main"
pacs-sr-train = "pacs_sr.cli.train:main"
pacs-sr-predict = "pacs_sr.cli.predict:main"
pacs-sr-analyze-metrics = "pacs_sr.cli.analyze_metrics:main"

[tool.setuptools]
packages = ["pacs_sr", "pacs_sr.config", "pacs_sr.model", "pacs_sr.utils", "pacs_sr.data", "pacs_sr.cli", "pacs_sr.analysis"]
